--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,3 @@
-@import 'base/normalize', 'base/variables';
+@import 'base/variables', 'base/design-system';
 
-@import 'regions/footer', 'regions/header', 'regions/promo';
+@import 'regions/footer', 'regions/header', 'regions/main'; 
