midterm project (mostly) complete

--- a/css/regions/_header.scss
+++ b/css/regions/_header.scss
@@ -13,7 +13,6 @@
     border-bottom-left-radius: 15px;
     z-index: 1000;
 }
-.nav-item {
-    text-align: right;
-    margin-right: 10px;
+.navbar-nav {
+    padding-left: 20px;
 }
