--- a/css/regions/_main.scss
+++ b/css/regions/_main.scss
@@ -1,5 +1,13 @@
+.promo {
+    width: 100%;
+    margin-bottom: 30px;
+    img {
+        width: 100%;
+    }
+}
 .summary {
-    p {
+    margin-bottom: 20px;
+    * {
         text-align: right;
     }
 }
@@ -7,6 +15,7 @@
     height: 30vh;
     overflow: hidden;
     width: 100%;
+    display: flex;
     img {
         height: 100%;
         object-fit: cover;
@@ -14,8 +23,13 @@
     }
 }
 .full {
-    padding: 5px;
     .thumbnail {
         height: 45vh;
     }
+}
+.bg-green {
+    background-color: $muteGreen;
+}
+.pg-description {
+    margin: 30px;
 }
