--- a/css/base/_design-system.scss
+++ b/css/base/_design-system.scss
@@ -9,7 +9,7 @@ h1 {
 }
 h2 {
     font-size: 36px;
-    padding: 0px;
+    padding: 0 0 0 20px;
     margin: 10px;
 }
 h3 {
@@ -19,11 +19,12 @@ h3 {
 }
 h4 {
     font-size: 24px;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0 0 10px 0;
+    border-bottom: solid $deepGreen 1px;
 }
 p {
-    font-size: 18px;
+    font-size: 24px;
     padding: 0px;
     margin: 0px;
 }
@@ -39,38 +40,55 @@ a:hover {
 }
 ul {
     list-style: none;
-    padding: 0 10px 20px 10px;
+    padding: 10px;
     margin: 0;
+}
+form {
+    margin: 20px;
 }
 label {
     font-size: 24px;
 }
 
-//overwriting bootstrap
-.col-12 {
-    padding: 5px;
-}
-
-//misc formatting
-section {
-    margin: 30px 20px 30px 20px;
-}
-.right-padding {
-    padding-right: 10px;
-}
-
 //repeating components
-.btn-primary {
+.btn {
     color: black;
     background-color: $muteGreen;
     border-color: $muteGreen;
     border-radius: 5px;
     font-size: 24px;
     margin-top: 10px;
+    a:hover {
+        color: black;
+    }
 }
-.btn-primary:hover {
+.btn:hover {
     color: black;
     border-color: $deepGreen;
     border-radius: 5px;
     background-color: $lightGray;
+}
+.section-line {
+    border-bottom: solid $deepGreen 1px;
+}
+
+//misc formatting
+.row {
+    margin: 0;
+}
+.border {
+    padding-bottom: 10px;
+}
+.x-padding {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+.y-margin {
+    margin: 20px 0 20px 0;
+}
+.x-margin {
+    margin: 0 15px 0 15px;
+}
+.bottom-margin {
+    margin-bottom: 20px;
 }
