--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
 
 h2 {
   font-size: 36px;
-  padding: 0px;
+  padding: 0 0 0 20px;
   margin: 10px;
 }
 
@@ -22,12 +22,13 @@ h3 {
 
 h4 {
   font-size: 24px;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0 0 10px 0;
+  border-bottom: solid #7F866E 1px;
 }
 
 p {
-  font-size: 18px;
+  font-size: 24px;
   padding: 0px;
   margin: 0px;
 }
@@ -46,27 +47,19 @@ a:hover {
 
 ul {
   list-style: none;
-  padding: 0 10px 20px 10px;
+  padding: 10px;
   margin: 0;
+}
+
+form {
+  margin: 20px;
 }
 
 label {
   font-size: 24px;
 }
 
-.col-12 {
-  padding: 5px;
-}
-
-section {
-  margin: 30px 20px 30px 20px;
-}
-
-.right-padding {
-  padding-right: 10px;
-}
-
-.btn-primary {
+.btn {
   color: black;
   background-color: #E9EDDE;
   border-color: #E9EDDE;
@@ -74,12 +67,44 @@ section {
   font-size: 24px;
   margin-top: 10px;
 }
+.btn a:hover {
+  color: black;
+}
 
-.btn-primary:hover {
+.btn:hover {
   color: black;
   border-color: #7F866E;
   border-radius: 5px;
   background-color: #F3F3F2;
+}
+
+.section-line {
+  border-bottom: solid #7F866E 1px;
+}
+
+.row {
+  margin: 0;
+}
+
+.border {
+  padding-bottom: 10px;
+}
+
+.x-padding {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.y-margin {
+  margin: 20px 0 20px 0;
+}
+
+.x-margin {
+  margin: 0 15px 0 15px;
+}
+
+.bottom-margin {
+  margin-bottom: 20px;
 }
 
 .footer-content {
@@ -108,12 +133,22 @@ section {
   z-index: 1000;
 }
 
-.nav-item {
-  text-align: right;
-  margin-right: 10px;
+.navbar-nav {
+  padding-left: 20px;
 }
 
-.summary p {
+.promo {
+  width: 100%;
+  margin-bottom: 30px;
+}
+.promo img {
+  width: 100%;
+}
+
+.summary {
+  margin-bottom: 20px;
+}
+.summary * {
   text-align: right;
 }
 
@@ -121,6 +156,7 @@ section {
   height: 30vh;
   overflow: hidden;
   width: 100%;
+  display: flex;
 }
 .thumbnail img {
   height: 100%;
@@ -128,11 +164,16 @@ section {
   flex: 1;
 }
 
-.full {
-  padding: 5px;
-}
 .full .thumbnail {
   height: 45vh;
+}
+
+.bg-green {
+  background-color: #E9EDDE;
+}
+
+.pg-description {
+  margin: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
